--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">@color/material_blue_grey_800</color>
     <color name="colorPrimaryDark">@color/material_blue_grey_900</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#40a3ff</color>
     <color name="blackDarkness">#000000</color>
 </resources>
